[project]
name = "bashe"
version = "0.2.1"
description = "A Tree-sitter based PHP parser (Rust + PyO3)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "ipykernel>=7.2.0",
  "phply>=1.2.6",
  "pytest>=7",
]

[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bashe"

[tool.pytest]
filterwarnings = [
  "ignore::DeprecationWarning",
]
